hphp/hack/test/typecheck/nonnull/nullsafe_member_access_on_nonnull.php.exp
File "nullsafe_member_access_on_nonnull.php", line 4, characters 13-15:
You are trying to access the member foo but this is not an object, it is a nonnull value (Typing[4062])
File "nullsafe_member_access_on_nonnull.php", line 3, characters 12-18:
Check this out
